# cozyfractal.com

./: .gitignore  Makefile  app.py  cozyfractal.service  flake.nix  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
.github/workflows/: deploy.yml
scripts/: render_static.py
src/: app.py
src/static/: einstein-plugin.html  random.js  source.css  style.css  umami-tracking.js
src/templates/: home.html  oldhome.html  showcase.html
src/templates/layouts/: base.html  regular.html
src/templates/macros/: macros.html
static/: random.js  source.css  style.css
templates/: cv.html  gamedev.html  home.html  showcase.html  test.html
templates/layouts/: base.html  regular.html
templates/macros/: macros.html
