[tool.poetry]
name = "cozyfractal.com"
version = "1.0.0"
description = "Personal website for CozyFractal"
authors = ["ddorn <diego.dorn@free.fr>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
