[project]
name = "cozyfractal.com"
version = "1.0.0"
description = "Personal website for CozyFractal"
authors = [{ name = "ddorn", email = "diego.dorn@free.fr" }]
requires-python = "~=3.8"
license = "WTFPL"
dependencies = [
    "fastapi>=0.70.0,<0.71",
    "uvicorn>=0.15.0,<0.16",
    "Jinja2>=3.0.2,<4",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
