[project]
name = "cozyfractal.com"
version = "1.0.0"
description = "Personal website for CozyFractal"
authors = [{ name = "ddorn", email = "diego.dorn@free.fr" }]
requires-python = "~=3.13.0"
license = { text = "WFTPL"}
dependencies = [
    "Jinja2>=3.0.2,<4",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
